# quiz-alpro-semester-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: book.controller.cpp.CFC09685E124BE2C.idx  book.controller.cpp.E18EC00057FACA67.idx  book.controller.hpp.F5B8D576CB93273D.idx  book.cpp.0AB5FF253D1A0759.idx  book.cpp.73CCD8B78F5256D5.idx  book.hpp.0FD1BEAD12A1DD58.idx  book.hpp.1CC91D1F061A0D55.idx  book.view.cpp.C26805CFFAF7B194.idx  history.view.cpp.F3F00F32DBF97AF6.idx  ids.hpp.5ACB264A7F547F33.idx  index.cpp.2C3746816405F2FC.idx  input_modal.cpp.82D173279D508F9B.idx  input_modal.hpp.6AEDCEA366CBA583.idx  json_file_handler.hpp.DA4816C06C938C13.idx  main.cpp.8ADD9A9095C940F3.idx  menu.cpp.F3B2994BDB529080.idx  menu.hpp.31B05155BC966ECC.idx  report.view.cpp.727F42C2AAAB74C2.idx  sort.cpp.3D3359C3A6F6EF7A.idx  sort.hpp.CDEDFABF12853A17.idx  table.cpp.0700671A13C6A6EA.idx  table.cpp.AEE8AF550EFACD4F.idx  table.hpp.15E482056F94E1DC.idx  table.hpp.BA59D94B04FF14E7.idx  theme.hpp.4F74925B100DAE23.idx  transaction.controller.cpp.00C107DBB1307D0D.idx  transaction.controller.cpp.7B0A4285574824E5.idx  transaction.controller.hpp.B68FC79793BF42CC.idx  transaction.cpp.129D9C47C64624E1.idx  transaction.cpp.72352393463EA32A.idx  transaction.hpp.8B90EEF2D7D7760D.idx  transaction.hpp.DB6344389F5B920E.idx  transaction.view.cpp.E6E8D26B33EFF405.idx  view.hpp.7B2C2D2AD51BEA53.idx
src/controllers/: book.controller.cpp  book.controller.hpp  transaction.controller.cpp  transaction.controller.hpp
src/models/: book.cpp  book.hpp  transaction.cpp  transaction.hpp
src/ui/: menu.cpp  menu.hpp  theme.hpp
src/ui/components/: input_modal.cpp  input_modal.hpp  table.cpp  table.hpp
src/ui/views/: book.view.cpp  history.view.cpp  report.view.cpp  transaction.view.cpp  view.hpp
src/utils/: ids.hpp  json_file_handler.hpp  sort.hpp
storage/: books.json  ids.json  transactions.json
